--- a/module3_solution/index.html
+++ b/module3_solution/index.html
@@ -24,18 +24,115 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
+        <div id="collapsable-nav" class="collapse navbar-collapse">
+					<ul id="nav-list" class="nav navbar-nav visible-xs">
+						<li><a href="#chicken" class="text-center">Chicken</a></li>
+						<li><a href="#beef" class="text-center">Beef</a></li>
+						<li><a href="#sushi" class="text-center">Sushi</a></li>
+					</ul>
+				</div><!-- .collapse .navbar-collapse -->
       </div>
     </nav>
   </header>
-  <div>Our Menu</div>
-  <div>
-    <div>Chicken<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus tenetur minus nulla eum consequatur voluptatum. Dolorem modi accusantium rem numquam mollitia dignissimos illum. Quibusdam ratione alias, optio repellat perspiciatis quae.</span></div>
-    <div>Beef<span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae nihil ab nisi architecto autem odit, animi consequatur beatae sed nam quibusdam, minus nesciunt cum ullam placeat, reiciendis harum et numquam.</span></div>
-    <div>Sushi<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur vitae fugiat unde rerum, officiis molestiae quas explicabo nisi voluptatum illo rem excepturi vero doloribus et! Nihil adipisci quaerat accusantium quae!</span></div>
-  </div>
+  <div id="main-content" class="container">
+		<h2 id="page-title" class="text-center">Our Menu</h2>
+		<section class="row">
+			<div id="main-text" class="col-xs-12">
+				<div class="text-background">
+					<h3 id="chicken">Chicken</h3>
+					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
+						Aenean
+						massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+						Donec
+						quam
+						felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+						Donec
+						pede
+						justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet
+						a,venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras
+						dapibus.Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula,
+						porttitor
+						eu,
+						consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a,
+						tellus.Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam
+						ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus.
+						Maecenas
+						tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit adipiscing sem neque sed
+						ipsum.
+						Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante
+						tincidunt
+						tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci
+						eget
+						eros
+						faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna.
+						Sed
+						consequat, leo eget bibendum sodales, augue velit cursus nunc.
+					</p>
+					<h3 id="beef">Beef</h3>
+					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
+						Aenean
+						massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+						Donec
+						quam
+						felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+						Donec
+						pede
+						justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet
+						a,venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras
+						dapibus.Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula,
+						porttitor
+						eu,
+						consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a,
+						tellus.Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam
+						ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus.
+						Maecenas
+						tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit adipiscing sem neque sed
+						ipsum.
+						Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante
+						tincidunt
+						tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci
+						eget
+						eros
+						faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna.
+						Sed
+						consequat, leo eget bibendum sodales, augue velit cursus nunc.
+					</p>
+					<h3 id="sushi">Sushi</h3>
+					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
+						Aenean
+						massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+						Donec
+						quam
+						felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+						Donec
+						pede
+						justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet
+						a,venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras
+						dapibus.Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula,
+						porttitor
+						eu,
+						consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a,
+						tellus.Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam
+						ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus.
+						Maecenas
+						tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit adipiscing sem neque sed
+						ipsum.
+						Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante
+						tincidunt
+						tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci
+						eget
+						eros
+						faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna.
+						Sed
+						consequat, leo eget bibendum sodales, augue velit cursus nunc.
+					</p>
+				</div>
+			</div>
+		</section>
+	</div>
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
-  <script src="js/jquery-3.6.0.min.js"></script>
+  <script src="js/jquery-2.1.4.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/script.js"></script>
 </body>
