--- a/module3_solution/index.html
+++ b/module3_solution/index.html
@@ -9,37 +9,37 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
   </head>
-<body>
-  <header>
-    <nav id="header-nav" class="navbar navbar-default">
-      <div class="container">
-        <div class="navbar-header">
-          <div class="navbar-brand">
-            <a href="index.html"><h1>Food, LLC</h1></a>
-          </div>
-        </div>
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <div id="collapsable-nav" class="collapse navbar-collapse">
-					<ul id="nav-list" class="nav navbar-nav visible-xs">
-						<li><a href="#chicken" class="text-center">Chicken</a></li>
-						<li><a href="#beef" class="text-center">Beef</a></li>
-						<li><a href="#sushi" class="text-center">Sushi</a></li>
-					</ul>
-				</div><!-- .collapse .navbar-collapse -->
-      </div>
-    </nav>
-  </header>
-  <div id="main-content" class="container">
+  <body>
+
+
+	<nav class="navbar" id="top">
+	  <div class="container">
+	
+		<div class="navbar-header">
+			<a class="navbar-brand" href="index.html">Food, LLC</a>
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span> 
+			</button>
+		</div>
+	
+		<div class="collapse" id="myNavbar">
+		  <ul class="nav navbar-nav visible-xs">
+			<li><a class="menu-item" href="#chicken">Chicken</a></li>
+			<li><a class="menu-item" href="#beef">Beef</a></li> 
+			<li><a class="menu-item" href="#sushi">Sushi</a></li> 
+		  </ul>
+		</div>
+	
+	  </div>
+	</nav>
+	<div id="main-content" class="container-fluid">
 		<h2 id="page-title" class="text-center">Our Menu</h2>
 		<section class="row">
 			<div id="main-text" class="col-xs-12">
-				<div class="text-background">
-					<h3 id="chicken">Chicken</h3>
+				<div id="chicken" class="section">
+					<h3 class="text-center">Chicken</h3>
 					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
 						Aenean
 						massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
@@ -68,7 +68,9 @@
 						Sed
 						consequat, leo eget bibendum sodales, augue velit cursus nunc.
 					</p>
-					<h3 id="beef">Beef</h3>
+				</div>
+				<div id="beef" class="section">
+					<h3 class="text-center">Beef</h3>
 					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
 						Aenean
 						massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
@@ -97,7 +99,9 @@
 						Sed
 						consequat, leo eget bibendum sodales, augue velit cursus nunc.
 					</p>
-					<h3 id="sushi">Sushi</h3>
+				</div>
+				<div id="sushi" class="section text-center">
+					<h3 class="text-center">Sushi</h3>
 					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
 						Aenean
 						massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
