--- a/module3_solution/index.html
+++ b/module3_solution/index.html
@@ -17,14 +17,14 @@
 	
 		<div class="navbar-header">
 			<a class="navbar-brand" href="index.html">Food, LLC</a>
-			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#collapsable-nav">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#collapsab">
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span> 
 			</button>
 		</div>
 	
-		<div class="collapse" id="collapsable-nav">
+		<div class="collapse" id="myNavbar">
 		  <ul class="nav navbar-nav visible-xs">
 			<li><a class="menu-item" href="#chicken">Chicken</a></li>
 			<li><a class="menu-item" href="#beef">Beef</a></li> 
